# algorithmic-library-cpp

./: CMakeLists.txt  Makefile  README.md  gcovr.sh
include/algorithmic/data_structure/: hash.h  lru_cache.h  simple_del_heap.h
include/algorithmic/data_structure/fenwick_tree/: fenwick_tree.h  fenwick_tree1.h
include/algorithmic/graph/: graph_base.h  graph_node.h  topological_sort.h
include/algorithmic/math/: math_utility.h
include/algorithmic/math/bm/: bm_prime.h
include/algorithmic/misc/: debug.h  detect.h  detect_compiler.h  string_utility.h
include/algorithmic/string/: exkmp.h  kmp.h  manacher.h  string_utility.h  sub_sequence_automaton.h
include/algorithmic/types_check/: has_class_internal_to_string.h  has_global_to_string.h  has_operator_stream.h  has_std_to_string.h
test/: CMakeLists.txt  hello_world_benchmark.cc  hello_world_test.cc
test/algorithmic/data_structure/: hash_test.cc  lru_cache_test.cc
test/algorithmic/graph/: topological_sort_test.cc
test/algorithmic/math/: math_utility_test.cc
test/algorithmic/math/bm/: bm_test.cc
test/algorithmic/misc/: detect_compuler_test.cc  detect_test.cc  string_utility_test.cc
test/algorithmic/string/: kmp_test.cc  manacher_benchmark.cc  string_utility_test.cc  sub_sequence_automaton_test.cc
test/data_structure/: lru_cache_test.cc
test/data_structure/fenwick_tree/: fenwick_tree1_test.cc  fenwick_tree_test.cc
test/string/: exkmp_test.cc  manacher_benchmark.cc  manacher_test.cc  sub_sequence_automaton_test.cc
